--- a/nginx/goodbye-ingress.yaml
+++ b/nginx/goodbye-ingress.yaml
@@ -13,7 +13,7 @@ metadata:
     nginx.ingress.kubernetes.io/session-cookie-hash: sha1
 spec:
   rules:
-  - host: DOMAIN.NAME
+  - host: localhost
     http:
       paths:
       - path: /v2/
