--- a/traeffik/hello-ingressRoute.yaml
+++ b/traeffik/hello-ingressRoute.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-service-tr
+  namespace: simple-apps
 spec:
   type: NodePort
   selector:
@@ -17,6 +18,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: hello-ingressroute-tr
+  namespace: simple-apps
 spec:
   entryPoints:
     - web
